Fix overflow issues with UserStats and Repos

--- a/src/styles/App.module.scss
+++ b/src/styles/App.module.scss
@@ -17,9 +17,6 @@ body {
     
     margin-left: auto;
     margin-right: auto;
-
-    border-left: 1px solid red;
-    border-right: 1px solid red;
 }
 
 @media screen and (min-width: 1280px) {
