--- a/src/styles/Repos.module.scss
+++ b/src/styles/Repos.module.scss
@@ -1,6 +1,4 @@
 .repoGridContainer {
-    // display: grid;
-    // grid-template-columns: 1fr;
     display: flex;
     flex-direction: column;
     gap: 1.2rem;
@@ -54,6 +52,7 @@
 .bottomLine {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
     gap: 1rem;
 }
 
@@ -66,6 +65,13 @@
 .repoLastUpdate {
     margin-left: 0.3rem;
     font-size: 0.75rem;
+    display: block;
+}
+
+@media screen and (min-width: 640px) {
+    .repo {
+        gap: 1.5rem;
+    }
 }
 
 @media screen and (min-width: 1024px) {
