--- a/src/styles/UserStats.module.scss
+++ b/src/styles/UserStats.module.scss
@@ -1,8 +1,6 @@
 .stats {
     margin-bottom: 1.7em;
 
-    display: flex;
-    gap: 1.5em;
 
     img {
         width: 9em;
@@ -16,6 +14,8 @@
 .pfpContainer {
     margin-top: -3em;
     padding: 10px;
+
+    width: fit-content;
 
     background-color: #20293A;
     border-radius: 10px;
@@ -31,7 +31,7 @@
 
     div {
         width: fit-content;
-        max-height: 4rem;
+        height: 4rem;
 
         padding: 0.5rem 1.5rem;
 
@@ -40,10 +40,6 @@
 
         background-color: #111629;
         border-radius: 10px;
-    }
-
-    div:last-child {
-        max-height: none;
     }
 }
 
@@ -62,12 +58,9 @@
 }
 
 @media screen and (min-width: 450px) {
-    .stat {
+    .stats {
         display: flex;
-        align-items: center;
-        margin-left: 0.6rem;
-        color: #CDD5E0;
-        word-wrap: break-word;
+        gap: 1.5em;
     }
 }
 
